--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       };
 
       $(document).ready(function() {
-        download_url = "http://jquery-flexselect.s3.amazonaws.com/jquery.flexselect-0.9.0.zip";
+        download_url = "https://github.com/rmm5t/jquery-flexselect/releases/download/v0.9.0/jquery.flexselect-0.9.0.zip";
         $("a.download").attr("href", download_url);
 
         var president = $("select#president");
